--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   },
   "homepage": "https://github.com/DouscheSois/union-tracking-sheets#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
