--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "homepage": "https://github.com/DouscheSois/union-tracking-sheets#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "express-async-handler": "^1.1.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.18"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
